unpackaged/main/default/objects/Account/fields/AOB_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>AOB_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AOB Acknowledged</label>
    <type>Checkbox</type>
</CustomField>