unpackaged/main/default/objects/Account/fields/AOB_Acknowledged_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>AOB_Acknowledged_Date_Time__c</fullName>
    <label>AOB Acknowledged Date/Time</label>
    <type>DateTime</type>
</CustomField>