unpackaged/main/default/objects/Account/fields/Baby_Insurance_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Baby_Insurance_Eligibility__c</fullName>
    <label>Baby Insurance Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Insurance_Eligibility</valueSetName>
    </valueSet>
</CustomField>