unpackaged/main/default/objects/Account/fields/Baby_Referral_Required__c.field-meta.xml
<CustomField>
    <fullName>Baby_Referral_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Baby Referral Required</label>
    <type>Checkbox</type>
</CustomField>