unpackaged/main/default/objects/Account/fields/Date_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Date_Inactive__c</fullName>
    <label>Date Inactive</label>
    <type>Date</type>
</CustomField>