unpackaged/main/default/objects/Account/fields/Financial_Class__c.field-meta.xml
<CustomField>
    <fullName>Financial_Class__c</fullName>
    <label>Financial Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue Cross Blue Shield</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Aetna</fullName>
            </value>
            <value>
                <fullName>Cigna</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Do Not Bill</fullName>
            </value>
            <value>
                <fullName>MultiPlan</fullName>
            </value>
            <value>
                <fullName>Newborn Families</fullName>
            </value>
            <value>
                <fullName>Self-Pay</fullName>
            </value>
            <value>
                <fullName>UnitedHealthcare</fullName>
            </value>
            <value>
                <fullName>Veterans/Military</fullName>
            </value>
            <value>
                <fullName>Contracted Commercial</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Motor Vehicle Accident</fullName>
            </value>
            <value>
                <fullName>Non-Contracted Commercial</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Workers Comp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>