unpackaged/main/default/objects/Account/fields/Home_State__c.field-meta.xml
<CustomField>
    <fullName>Home_State__c</fullName>
    <label>Home State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>