unpackaged/main/default/objects/Account/fields/Home_Street__c.field-meta.xml
<CustomField>
    <fullName>Home_Street__c</fullName>
    <label>Home Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>