unpackaged/main/default/objects/Account/fields/Home_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Home_Zip_Postal_Code__c</fullName>
    <label>Home Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>