unpackaged/main/default/objects/Account/fields/Lactation_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Lactation_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lactation Consultant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lactation Practice</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>