unpackaged/main/default/objects/Account/fields/Lactation_Consultant_Name__c.field-meta.xml
<CustomField>
    <fullName>Lactation_Consultant_Name__c</fullName>
    <description>Captures which LC&#39;s vanity URL patient used; is blank otherwise</description>
    <inlineHelpText>Captures which LC&#39;s vanity URL patient used; is blank otherwise</inlineHelpText>
    <label>Lactation Consultant (Vanity URL)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>