unpackaged/main/default/objects/Account/fields/Lactation_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Lactation_Group_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lactation Group Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lactation Practices</relationshipLabel>
    <relationshipName>Lactation_Practices</relationshipName>
    <type>Lookup</type>
</CustomField>