unpackaged/main/default/objects/Account/fields/No_insurance_card__c.field-meta.xml
<CustomField>
    <fullName>No_insurance_card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No insurance card</label>
    <type>Checkbox</type>
</CustomField>