unpackaged/main/default/objects/Account/fields/Privacy_T_C__c.field-meta.xml
<CustomField>
    <fullName>Privacy_T_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privacy T&amp;C</label>
    <type>Checkbox</type>
</CustomField>