unpackaged/main/default/objects/Account/fields/Privacy_T_C_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Privacy_T_C_Date_Time__c</fullName>
    <label>Privacy T&amp;C Date/Time</label>
    <type>DateTime</type>
</CustomField>