unpackaged/main/default/objects/Account/fields/Referral_Number__c.field-meta.xml
<CustomField>
    <fullName>Referral_Number__c</fullName>
    <label>Referral Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>