unpackaged/main/default/objects/Account/fields/Relationship_to_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Subscriber__c</fullName>
    <label>Relationship to Subscriber</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Relationship_to_Subscriber</valueSetName>
    </valueSet>
</CustomField>