unpackaged/main/default/objects/Account/fields/Secondary_Insurance_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Insurance_Eligibility__c</fullName>
    <label>Secondary Insurance Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Insurance_Eligibility</valueSetName>
    </valueSet>
</CustomField>