unpackaged/main/default/objects/Account/fields/Sensitive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Reason__c</fullName>
    <label>Sensitive Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sensitive_Reasons</valueSetName>
    </valueSet>
</CustomField>