unpackaged/main/default/objects/Account/fields/Sensitive_Situation__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Situation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Captures when this patient has experienced infant loss or there is another sensitive situation to be considered when communicating with the patient.</inlineHelpText>
    <label>Sensitive Situation</label>
    <type>Checkbox</type>
</CustomField>