unpackaged/main/default/objects/Account/recordTypes/Clinical_Practice.recordType-meta.xml
<RecordType>
    <fullName>Clinical_Practice</fullName>
    <active>true</active>
    <label>Clinical Practice</label>
</RecordType>