unpackaged/main/default/objects/Account/recordTypes/Employer_Sponsor.recordType-meta.xml
<RecordType>
    <fullName>Employer_Sponsor</fullName>
    <active>true</active>
    <label>Employer/Sponsor</label>
</RecordType>