unpackaged/main/default/objects/Account/validationRules/Reason_For_Ineligible_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_For_Ineligible_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND($CustomMetadata.Feature_Flag__mdt.TLN_30673_CAPTUREREASONFORINACTIVE.Enabled__c, RecordType.DeveloperName = &#39;Patient&#39;, ISPICKVAL(Eligibility_Status__pc, &#39;Ineligible&#39;), ISBLANK(TEXT(Reason_For_Inactive__c)), NOT($Permission.Bypass_Account_Validation))</errorConditionFormula>
    <errorDisplayField>Reason_For_Inactive__c</errorDisplayField>
    <errorMessage>Please, specify a reason for being inactive.</errorMessage>
</ValidationRule>