unpackaged/main/default/objects/Account/validationRules/Sensitive_Reason_Is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Sensitive_Reason_Is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Sensitive_Situation__c, ISBLANK(Sensitive_Reason__c))</errorConditionFormula>
    <errorDisplayField>Sensitive_Reason__c</errorDisplayField>
    <errorMessage>Please, specify the reason.</errorMessage>
</ValidationRule>