unpackaged/main/default/objects/Account/listViews/All_Clinical_Practices.listView-meta.xml
<ListView>
    <fullName>All_Clinical_Practices</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Clinical_Practice</value>
    </filters>
    <label>All Clinical Practices</label>
</ListView>