unpackaged/main/default/objects/Account/listViews/All_Employers_Sponsors.listView-meta.xml
<ListView>
    <fullName>All_Employers_Sponsors</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Employer_Sponsor</value>
    </filters>
    <label>All Employers/Sponsors</label>
</ListView>